tests/fixtures/valid/input.moss
fn main
    output
        type: "greeting"
        message: "hello, {input.name}"
        count: input.count
