tests/fixtures/invalid/wrong_arity.moss
fn greet(name)
    return "hello, {name}"

fn main
    output greet("ada", "lovelace")
